force-app/main/default/objects/tdc_cti__TwilioConfig__c/fields/tdc_cti__ApplicationSid__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__ApplicationSid__c</fullName>
    <label>ApplicationSid</label>
    <length>100</length>
    <type>Text</type>
</CustomField>