force-app/main/default/objects/tdc_cti__TwilioConfig__c/fields/tdc_cti__AuthToken__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__AuthToken__c</fullName>
    <label>AuthToken</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>