force-app/main/default/objects/tdc_cti__TwilioConfig__c/fields/tdc_cti__CallerId__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__CallerId__c</fullName>
    <label>CallerId</label>
    <length>15</length>
    <type>Text</type>
</CustomField>